backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mekn-backend
  namespace: ahmedhemida
  labels:
    app: mekn
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mekn
      tier: backend
  template:
    metadata:
      labels:
        app: mekn
        tier: backend
    spec:
      containers:
        - name: express-app
          image: mongo-express
          ports:
            - containerPort: 8081
          livenessProbe:
            httpGet:
              path: /
              port: 8081
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 8081
            initialDelaySeconds: 5
            periodSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  name: mongo-express
  namespace: ahmedhemida
  labels:
    app: mekn
    tier: backend
spec:
  type: NodePort
  ports:
    - port: 8081
      targetPort: 8081
      nodePort: 32000
  selector:
    app: mekn
    tier: backend
