database-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mekn-database
  namespace: ahmedhemida
  labels:
    app: mekn
    tier: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mekn
      tier: database
  template:
    metadata:
      labels:
        app: mekn
        tier: database
    spec:
      containers:
        - name: mongodb
          image: mongodb/mongodb-community-server
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-storage
              mountPath: /ahmedhemida/db
      volumes:
        - name: mongo-storage
          persistentVolumeClaim:
            claimName: mongo-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: ahmedhemida
  labels:
    app: mekn
    tier: database
spec:
  type: ClusterIP
  selector:
    app: mekn
    tier: database
  ports:
    - port: 27017
      targetPort: 27017
