ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mekn-ingress
  namespace: ahmedhemida
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: mekn-app.ahmedhemida.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mongo-express
                port:
                  number: 8081
